samples/_failures_safe/1761092373_77c397_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc57123f.c: In function ‘process_compression’:
./samples/SAFE/__tmp_fc57123f.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
